--- a/SessionApp/Views/Shared/_Layout.cshtml
+++ b/SessionApp/Views/Shared/_Layout.cshtml
@@ -35,7 +35,8 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/SessieScript.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
